# soccer_sim_pkg

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: dependencies_workflow.yml
launch/: soccer_sim.launch
src/: ObjectDetection.py  goal_detector_sim.py  lines_detector_sim.py  walking_gazebo.cpp
src/assets/lab_field/: model-1_4.sdf  model.config  model.sdf
src/assets/robocup_kidsize_field_model/: model-1_4.sdf  model.config  model.sdf
src/worlds/: field_world_gazebo  lab_field
